java/java-tests/testData/codeInsight/daemonCodeAnalyzer/unnamedClass/Incorrect unnamed class name with spaces.java
<error descr="Unnamed class's file name is not a valid identifier">void main() {}</error>